Completely renamed the solution and all projects. Twainsoft.PCV is the new name due to namespace conflicts.

--- a/.gitignore
+++ b/.gitignore
@@ -175,5 +175,5 @@ FakesAssemblies/
 
 # Build stuff with FAKE
 /output
-/src/Twainsoft.PagedCollectionView.sln.ide
+/src/Twainsoft.PCV.sln.ide
 /tools/FAKE
