--- a/src/Twainsoft.PCV.Tests/Twainsoft.PCV.Tests.csproj
+++ b/src/Twainsoft.PCV.Tests/Twainsoft.PCV.Tests.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{68C012B2-ECEA-4A42-AB67-9F0E12AFE78C}</ProjectGuid>
+    <ProjectGuid>{488B2FEB-A526-4755-85D6-7E861BEFD89F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Twainsoft.PagedCollectionView</RootNamespace>
-    <AssemblyName>Twainsoft.PagedCollectionView</AssemblyName>
+    <RootNamespace>Twainsoft.PCV.Tests</RootNamespace>
+    <AssemblyName>Twainsoft.PCV.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,12 +30,20 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="PresentationFramework" />
+    <Reference Include="FluentAssertions">
+      <HintPath>..\packages\FluentAssertions.3.1.229\lib\net45\FluentAssertions.dll</HintPath>
+    </Reference>
+    <Reference Include="FluentAssertions.Core">
+      <HintPath>..\packages\FluentAssertions.3.1.229\lib\net45\FluentAssertions.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Machine.Specifications">
+      <HintPath>..\packages\Machine.Specifications.0.8.3\lib\net45\Machine.Specifications.dll</HintPath>
+    </Reference>
+    <Reference Include="Machine.Specifications.Clr4">
+      <HintPath>..\packages\Machine.Specifications.0.8.3\lib\net45\Machine.Specifications.Clr4.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Design" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,25 +52,18 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Common\TypeHelper.cs" />
-    <Compile Include="ComponentModel\IPagedCollectionView.cs" />
-    <Compile Include="ComponentModel\PageChangingEventArgs.cs" />
-    <Compile Include="ComponentModel\PagedCollectionViewResources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>PagedCollectionViewResources.resx</DependentUpon>
-    </Compile>
-    <Compile Include="Data\CollectionViewGroupInternal.cs" />
-    <Compile Include="Data\CollectionViewGroupRoot.cs" />
-    <Compile Include="Data\PagedCollectionView.cs" />
+    <Compile Include="When_a_new_paged_collection_view_has_a_max_page_size.cs" />
+    <Compile Include="When_a_new_paged_collection_view_is_filled_with_data.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="ComponentModel\PagedCollectionViewResources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>PagedCollectionViewResources.Designer.cs</LastGenOutput>
-      <CustomToolNamespace>System.ComponentModel</CustomToolNamespace>
-    </EmbeddedResource>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Twainsoft.PCV\Twainsoft.PCV.csproj">
+      <Project>{68c012b2-ecea-4a42-ab67-9f0e12afe78c}</Project>
+      <Name>Twainsoft.PCV</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
